# XJTU-RMV-Task04

./: README.md
hik_camera_ros2/: CMakeLists.txt  package.xml
hik_camera_ros2/config/: camera_view.rviz
hik_camera_ros2/launch/: hik_camera_launch.py
hik_camera_ros2/src/: hik_camera_node.cpp
